# cpp_snippets

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
samples/: CMakeLists.txt  main.cpp
samples/function_addresses/: pointers_to_member_functions.cpp
samples/type_traits/: CMakeLists.txt  constexpr_if_base_of.cpp  helper_classes.cpp  sfinae_return_type_is_base_of.cpp  sfinae_template_type_is_base_of.cpp  static_assert_is_base_of.cpp  tag_dispatch_is_base_of.cpp  type_trait_is_base_of.cpp
samples/variadic_templates/: CMakeLists.txt  variadic_combinations.cpp  variadic_fmin.cpp  variadic_print_with_initializer_lists.cpp  variadic_printing.cpp  variadic_printing_with_initializer_lists.cpp  variadic_printing_with_recursion.cpp
samples/variadic_templates/approval_tests/: variadic_fmin.Variadic_fmin.approved.txt  variadic_printing.Variadic_Printing.approved.txt  variadic_printing_with_initializer_lists.Variadic_Printing_with_Initializer_Lists.approved.txt
shared_code/: CMakeLists.txt  helper_classes.h
