project(variadic_teamplates)

add_executable(
    variadic_printing
    variadic_printing.cpp)
add_executable(
    variadic_print_with_initializer_lists
    variadic_print_with_initializer_lists.cpp)
add_executable(
    variadic_fmin
    variadic_fmin.cpp)
add_executable(
    variadic_printing_with_recursion
    variadic_printing_with_recursion.cpp)
