project(variadic_teamplates)

add_executable(
    variadic_printing
    variadic_printing.cpp)
add_executable(
    variadic_printing_with_initializer_listsp
    variadic_printing_with_initializer_lists.cpp)
add_executable(
    variadic_fmin
    variadic_fmin.cpp)
add_executable(
    variadic_printing_with_recursion
    variadic_printing_with_recursion.cpp)

add_executable(
    variadic_combinations
    variadic_combinations.cpp
)